# fastapi-template

./: .dockerignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
