[tool.poetry]
name = "fastapi_template"
version = "1"
description = "example app"
authors = ["Taylor Casselman <taylor.casselman@carbonarc.co>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
